<?xml version="1.0" encoding="utf-8"?>

<resources>

    <!-- App -->
    <string name="libbrs_app_name">BD Browser</string>
    <string name="libbrs_app_done">Done</string>
    <string name="libbrs_app_error">Error</string>
    <string name="libbrs_app_warning">Warning</string>
    <string name="libbrs_app_permission">To use this feature you must grant permission. After that restart the app.</string>
    <string name="libbrs_list_empty">List is empty</string>
    <string name="libbrs_album_title_bookmarks">Bookmarks</string>
    <string name="libbrs_album_title_history">History</string>
    <string name="libbrs_album_title_home">Home</string>
    <string name="libbrs_search_hint">Search</string>

    <!-- Menu -->
    <string name="libbrs_main_menu_new_tab">New tab (background)</string>
    <string name="libbrs_main_menu_new_tabProfile">New tab (with profile …)</string>
    <string name="libbrs_main_menu_new_tabOpen">New tab (foreground)</string>
    <string name="libbrs_main_omnibox_input_hint">Search or type URL</string>
    <string name="libbrs_menu_open_with">Open link with …</string>

    <string name="libbrs_menu_quit">Quit</string>
    <string name="libbrs_menu_openFav">Open Favorite</string>
    <string name="libbrs_menu_delete">Delete</string>
    <string name="libbrs_menu_edit">Edit</string>
    <string name="libbrs_menu_closeTab">Close tab</string>
    <string name="libbrs_menu_download">Open downloads</string>
    <string name="libbrs_menu_fav">Save as favorite</string>
    <string name="libbrs_menu_sc">Shortcut on home screen</string>
    <string name="libbrs_menu_filter">Filter by …</string>

    <string name="libbrs_menu_share_link">Share link</string>

    <string name="libbrs_menu_save_home">Save at Home</string>
    <string name="libbrs_menu_save_bookmark">Save as bookmark</string>
    <string name="libbrs_menu_save_as">Save as …</string>
    <string name="libbrs_menu_save_pdf">Save as PDF</string>
    <string name="libbrs_menu_shareClipboard">Copy to clipboard</string>

    <string name="libbrs_menu_other_searchSite">Search on site</string>

    <!-- Dialog -->
    <string name="libbrs_dialog_title_hint">Title:</string>
    <string name="libbrs_dialog_URL_hint">URL:</string>
    <string name="libbrs_dialog_extension_hint">Extension (for example: \".jpg\"):</string>
    <string name="libbrs_dialog_sign_in_username">Username</string>
    <string name="libbrs_dialog_sign_in_password">Password</string>
    <string name="libbrs_dialog_title_download">Download the file?</string>
    <string name="libbrs_dialog_content_resubmission">Resubmit your data?</string>
    <string name="libbrs_dialog_content_ssl_error">The certificate of the site is not trusted. Proceed anyway?</string>

    <!-- Settings -->
    <string name="libbrs_setting_label">Settings</string>

    <!-- browser setting -->
    <string name="libbrs_setting_title_browser">Browser Settings</string>

    <string name="libbrs_setting_title_search_engine">Search Engine</string>
    <string name="libbrs_setting_summary_search_engine_google">Google</string>
    <string name="libbrs_setting_summary_search_engine_duckduckgo">DuckDuckGo</string>
    <string name="libbrs_setting_summary_search_engine_bing">Bing</string>
    <string name="libbrs_setting_summary_search_engine_baidu">Baidu</string>
    <string name="libbrs_setting_summary_search_engine_searx">Searx</string>
    <string name="libbrs_setting_summary_search_engine_qwant">Qwant</string>
    <string name="libbrs_setting_summary_search_engine_ecosia">Ecosia</string>
    <string name="libbrs_setting_summary_search_engine_metager">Metager</string>

    <string name="libbrs_setting_title_font">Font size</string>
    <string name="libbrs_setting_title_dom">DOM Storage</string>

    <string name="libbrs_setting_title_save_data">Request \'Save Data\'</string>

    <string name="libbrs_setting_title_profiles">Profiles</string>
    <string name="libbrs_setting_title_profiles_edit">Edit profiles</string>
    <string name="libbrs_setting_title_profiles_trustedList">Trusted websites</string>
    <string name="libbrs_setting_title_profiles_standardList">Standard websites</string>
    <string name="libbrs_setting_title_profiles_protectedList">Protected websites</string>
    <string name="libbrs_setting_title_profiles_startApp">Profile on app start</string>
    <string name="libbrs_setting_title_profiles_trusted">Trusted</string>
    <string name="libbrs_setting_title_profiles_standard">Standard</string>
    <string name="libbrs_setting_title_profiles_protected">Protected</string>
    <string name="libbrs_setting_title_profiles_changed">Custom</string>
    <string name="libbrs_setting_title_profiles_active">Profile</string>
    <string name="libbrs_setting_title_profiles_dataUsage">Data usage</string>
    <string name="libbrs_setting_title_profiles_privacy">Privacy</string>
    <string name="libbrs_setting_title_profiles_Security">Security</string>

    <!-- browser start -->
    <string name="libbrs_setting_title_images">Images</string>
    <string name="libbrs_setting_title_cookie">Cookies</string>
    <string name="libbrs_setting_summary_cookie_delete">If enabled, all cookies will be deleted. Also the Cookies of trusted websites.</string>

    <string name="libbrs_setting_title_javascript_popUp">Popups</string>
    <string name="libbrs_setting_title_javascript">JavaScript</string>

    <string name="libbrs_setting_title_adblock">AdBlock</string>
    <string name="libbrs_setting_summary_adblock">Enable AdBlock to block annoying ads. Sites also load faster when enabled.</string>
    <string name="libbrs_setting_title_adblockHost">Blocked content</string>

    <string name="libbrs_setting_title_location">Location</string>
    <string name="libbrs_setting_title_history">History</string>

    <string name="libbrs_setting_title_autofill">Form Data/Autofill</string>
    <string name="libbrs_setting_summary_autofill">Enable the saving of form data (Android Nougat and below) or autofill service (Android Oreo and above).</string>


    <!-- browser clear -->
    <string name="libbrs_clear_title_quit">Clear on application exit</string>
    <string name="libbrs_clear_title_cache">Clear Cache</string>
    <string name="libbrs_clear_title_cookie">Clear Cookies</string>
    <string name="libbrs_clear_title_history">Clear History</string>
    <string name="libbrs_localData">Clear on device stored data</string>

    <string name="libbrs_clear_title_deleteDatabase">Delete database</string>
    <string name="libbrs_clear_summary_deleteDatabase">Delete the whole database (Startpage, bookmarks, history and all whitelists).</string>


    <!-- App setting -->
    <string name="libbrs_setting_title_app">App Settings</string>
    <string name="libbrs_setting_title_ui">Behavior/UI</string>

    <string name="libbrs_setting_title_reload">Swipe down to reload</string>

    <string name="libbrs_setting_title_searchEngine">Custom search engine</string>

    <string name="libbrs_setting_title_userAgent">Custom user agent</string>

    <string name="libbrs_setting_title_fingerPrint">Fingerprint protection</string>

    <!-- App behavior -->

    <string name="libbrs_setting_title_behavior">Behavior</string>

    <string name="libbrs_setting_title_confirm_tab_close">Confirm tab close</string>

    <string name="libbrs_setting_overView_onStart_title">Show on start</string>

    <!-- gestures -->

    <!-- Data -->
    <string name="libbrs_hint_database">This will delete current data. Proceed?</string>


    <!-- Others setting -->

    <!-- Toast -->
    <string name="libbrs_toast_copy_successful">Successfully copied</string>
    <string name="libbrs_toast_delete_successful">Successfully deleted</string>
    <string name="libbrs_toast_domain_already_exists">Domain already exists</string>
    <string name="libbrs_toast_input_empty">You haven\'t input anything</string>
    <string name="libbrs_toast_invalid_domain">Invalid domain</string>
    <string name="libbrs_toast_restart">You must restart \"BD Browser\" to apply changes. Close now?</string>
    <string name="libbrs_toast_quit_TAB">Do you want to close the TAB?</string>
    <string name="libbrs_toast_downloadComplete">Download complete. Open file manager?</string>


    <!-- Whitelist -->
    <string name="libbrs_whitelist_menu_clear">Clear</string>
    <string name="libbrs_whitelist_edit_hint">Domain</string>
    <string name="libbrs_whitelist_add">Add</string>
    <string name="libbrs_menu_mobileView">Mobile view</string>
    <string name="libbrs_menu_desktopView">Desktop view</string>
    <string name="libbrs_menu_dayView">Day view</string>
    <string name="libbrs_menu_nightView">Night view</string>
    <string name="libbrs_setting_userScript">Custom JavaScript code</string>
    <string name="libbrs_setting_title_camera">Allow camera usage</string>
    <string name="libbrs_setting_title_microphone">Allow microphone usage</string>
    <string name="libbrs_setting_title_tabsReload">Reload tabs</string>
    <string name="libbrs_setting_title_tabsRestore">Restore tabs</string>
    <string name="libbrs_setting_title_userInterface">User interface</string>
    <string name="libbrs_setting_summary_tabsReload">Reload last opened tabs, when starting FOSS Browser.</string>
    <string name="libbrs_setting_summary_tabsRestore">Restore tabs, when FOSS Browser gets killed by the system.</string>
    <string name="libbrs_hint_DRM_Media">Allow DRM protected media playback?</string>
    <string name="libbrs_menu_reload">Reload</string>
    <string name="libbrs_menu_restart">Restart and reload tabs</string>
    <string name="libbrs_profile_warning">Overwritten by:</string>
    <string name="libbrs_setting_title_screenOn">Keep screen on</string>
    <string name="libbrs_pref_title_start_page">起始页</string>
    <string name="libbrs_site_req_location_permission_summary">此网站正在请求定位权限，是否授予？</string>
    <string name="libbrs_grant_permission">授予</string>
    <string name="libbrs_site_req_camera_permission_summary">此网站正在请求相机使用权限，是否授予？</string>
    <string name="libbrs_site_req_miscrophone_permission_summary">此网站正在请求麦克风权限，是否授予？</string>

</resources>
