<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ListView
        android:id="@+id/whitelist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/whitelist_empty"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center|top"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/libbrs_list_empty"
        android:textAllCaps="false"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/libbrs_toolbar_color"
        android:elevation="8dp"
        android:orientation="vertical"
        tools:background="@android:color/white">

        <EditText
            android:id="@+id/whitelist_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/libbrs_whitelist_edit_hint"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:scrollHorizontally="true"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textCursorDrawable="@null" />

        <Button
            android:id="@+id/whitelist_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:ellipsize="end"
            android:includeFontPadding="false"
            android:maxLines="1"
            android:text="@string/libbrs_whitelist_add"
            android:textAllCaps="true" />

    </LinearLayout>

</LinearLayout>

